--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "bcentral",
-  "version": "0.1.0",
+  "name": "portada",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "i18next": "^19.4.5",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.5.1",
     "react-scripts": "^3.4.0"
   },
   "scripts": {
